--- a/Vixian.html
+++ b/Vixian.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class= content>
-        <img src="Assets/Vixian.png">
+        <img src="assets/Vixian.png">
         <p>Name: 2021 All New Vixian Special Edition</p>
         <p>Brand: Vixian</p>
         <p>Available Colours: Green, Blue, White, Black</p>
