--- a/P25.html
+++ b/P25.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class= content>
-        <img src="Assets/P25.png">
+        <img src="assets/P25.png">
         <p>Name: 2021 P25 ABS Limited Edition</p>
         <p>Brand: Vixian</p>
         <p>Available Colours: Green, Blue, White, Black</p>
