--- a/Preego.html
+++ b/Preego.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class= content>
-        <img src="Assets/Preego.png">
+        <img src="assets/Preego.png">
         <p>Name: 2021 New Preego S</p>
         <p>Brand: Vixian</p>
         <p>Available Colours: Green, Blue, White, Black</p>
