--- a/Meo.html
+++ b/Meo.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class= content>
-        <img src="Assets/Meo.png">
+        <img src="assets/Meo.png">
         <p>Name: 2021 New Meo N3</p>
         <p>Brand: Vixian</p>
         <p>Available Colours: Green, Blue, White, Black</p>
