--- a/RX6R.html
+++ b/RX6R.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class= content>
-        <img src="Assets/RX6R.png">
+        <img src="assets/RX6R.png">
         <p>Name: 2021 New Manja RX-6R</p>
         <p>Brand: Kawasako</p>
         <p>Available Colours: Green, Blue, White, Black</p>
