--- a/TLX250.html
+++ b/TLX250.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class= content>
-        <img src="Assets/TLX250.png">
+        <img src="assets/TLX250.png">
         <p>Name: 2021 New TLX250</p>
         <p>Brand: Kawasako</p>
         <p>Available Colours: Green, Blue, White, Black</p>
