--- a/Y175.html
+++ b/Y175.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class= content>
-        <img src="Assets/Y175.png">
+        <img src="assets/Y175.png">
         <p>Name: 2021 New Y175</p>
         <p>Brand: Kawasako</p>
         <p>Available Colours: Green, Blue, White, Black</p>
