--- a/Versus650.html
+++ b/Versus650.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class= content>
-        <img src="Assets/Versus650.png">
+        <img src="assets/Versus650.png">
         <p>Name: 2021 New Versus 650</p>
         <p>Brand: Kawasako</p>
         <p>Available Colours: Green, Blue, White, Black</p>
